samples/_failures_safe/1761300078_762251_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_316dd01c.c: In function ‘main’:
./samples/SAFE/__tmp_316dd01c.c:158:31: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  158 |     multiply_matrices(&mat1, &mat
      |                               ^~~
      |                               mat2
./samples/SAFE/__tmp_316dd01c.c:158:31: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_316dd01c.c:158:34: error: expected ‘)’ at end of input
  158 |     multiply_matrices(&mat1, &mat
      |                      ~           ^
      |                                  )
./samples/SAFE/__tmp_316dd01c.c:158:5: error: too few arguments to function ‘multiply_matrices’
  158 |     multiply_matrices(&mat1, &mat
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_316dd01c.c:97:6: note: declared here
   97 | void multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_316dd01c.c:158:5: error: expected declaration or statement at end of input
  158 |     multiply_matrices(&mat1, &mat
      |     ^~~~~~~~~~~~~~~~~
